# Risk-Control-Using-a-Bayesian-Joint-Quantile-Time-Series-Model-For-Asset-Returns

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: index.html
docs/figures/: autocorr.fig
notebooks/: NB01_Backtest_1.ipynb  NB01_Backtest_Interday.ipynb  NB01_Backtest_Interday_working.ipynb  NB02_Backtest_Intraday.ipynb  test.ipynb
scripts/: reduce_z.m  test.m
scripts/Archive/: LK_norm.m  LK_stud.m  covAEiso.m  dan_forecasts.m  logSt.m  lognormpdf.m  q_norm_BJSAV.m  q_norm_BJSSV.m  q_stud_BJGJR.m  q_stud_BJSAV.m  run_BJQTS11.m
scripts/Archive/__MACOSX/: ._BJQTSfortables.tex  ._LK_norm.m  ._LK_stud.m  ._logSt.m  ._lognormpdf.m  ._predex.m  ._q_norm_BJGJR.m  ._q_norm_BJSAVL.m  ._q_norm_BJSSV.m  ._q_stud_BJGJR.m  ._q_stud_BJSSV.m
scripts/BJQTS Code/: GOOG_ret.xlsx  MHRWIK_PT_forecasts.m  q_norm_BJGJR.m  q_norm_BJSAVL.m  q_stud_BJSSV.m  run_BJQTS.m  sp500_interday_returns.xlsx
scripts/BJQTS Code/__MACOSX/: ._MHRWIK_PT.m  ._covAEiso.m  ._q_norm_BJSAV.m  ._run_BJQTS.m  ._run_BJQTS11.m
scripts/BJQTS_Code/: BJQTSfortables.tex  MHRWIK_PT.m  MHRWIK_PT2.m  dan_forecasts.m  predex.m  test.m
scripts/BJQTS_Code/__MACOSX/: ._q_stud_BJSAV.m
src/scripts/: sql_in.py
src/stats_utils/: colour_map_utils.py  dash_timeseries_app.py  performance.py  returns.py  strategies.py
