[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "stats-utils"
version = "0.0.1"
requires-python = ">=3.9"
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]
# Optional: uncomment these to package only `stats_utils` and exclude `scripts`.
# include = ["stats_utils", "stats_utils.*"]
# exclude = ["scripts", "scripts.*"]
